--- a/ImageSlide/index.html
+++ b/ImageSlide/index.html
@@ -10,25 +10,25 @@
     <div class="slider-wrap" id="slider-wrap">
       <ul class="list slider" id="slider">
         <li>
-          <img src="./src/image/red.jpeg" />
+          <img src="<%= require('./src/image/red.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/orange.jpeg" />
+          <img src="<%= require('./src/image/orange.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/yellow.jpeg" />
+          <img src="<%= require('./src/image/yellow.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/green.jpeg" />
+          <img src="<%= require('./src/image/green.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/blue.jpeg" />
+          <img src="<%= require('./src/image/blue.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/indigo.jpeg" />
+          <img src="<%= require('./src/image/indigo.jpeg') %>" />
         </li>
         <li>
-          <img src="./src/image/violet.jpeg" />
+          <img src="<%= require('./src/image/violet.jpeg') %>" />
         </li>
       </ul>
 
@@ -38,15 +38,7 @@
       </div>
 
       <div class="indicator-wrap" id="indicator-wrap">
-        <ul>
-          <li class="active"></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <ul></ul>
       </div>
 
       <div class="control-wrap play" id="control-wrap">
